# RosScope

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md
include/rrcc/: command_runner.hpp  control_actions.hpp  diagnostics_engine.hpp  health_monitor.hpp  main_window.hpp  process_manager.hpp  remote_monitor.hpp  ros_inspector.hpp  runtime_worker.hpp  session_recorder.hpp  snapshot_diff.hpp  snapshot_manager.hpp  system_monitor.hpp  telemetry.hpp
logs/: telemetry_last_exit.json  telemetry_live.json
resources/: example_fleet_targets.json  example_preset.json  logo
src/: main.cpp
src/services/: command_runner.cpp  control_actions.cpp  diagnostics_engine.cpp  health_monitor.cpp  process_manager.cpp  remote_monitor.cpp  ros_inspector.cpp  runtime_worker.cpp  session_recorder.cpp  snapshot_diff.cpp  snapshot_manager.cpp  system_monitor.cpp  telemetry.cpp
src/ui/: main_window.cpp
tools/: perf_smoke.sh
